discussion/kv_engine/155140/155140_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Remove implicit creation of the ExecutorPool

Make sure it is explicitly created before it is used. This is
mostly a "test issue" as the memcached core explicitly create
the pool before starting to accept clients (and shut it down
as part of shutdown)

Change-Id: I36786a844de7dea359bf0cb5ecba77b086e96f52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 16:22:23.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 17:29:25.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36648/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.basic/persistent_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.basic/persistent_value_only
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(133): error: Expected equality of these values:
  MoreAvailable::No
    Which is: 1-byte object <00>
  res.moreAvailable
    Which is: 1-byte object <01>
[  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.basic/persistent_value_only, where GetParam() = ("persistent", "value_only") (44 ms)
CollectionsEraserTests/CollectionsEraserTest.basic/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36648/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9686/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9686/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9686/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8282/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/222/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31320/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10334/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11409/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11680/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11261/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19265/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
